# packman-exploration

./: .gitignore  .gitmodules  README.md  packman-exploration.cabal  relink-not-working-demo.bash  relink-with-transformation-demo.bash  stack.yaml  transform-without-top-level-bindings.bash  try-build.bash
app/: BasicExample.hs  Main.hs  Module.hs  NoTopLevelFunctions1.hs  NoTopLevelFunctions2.hs  Relink1.hs  Relink2.hs  TransformForRelink.hs
src/: Lib.hs  PointerTransformation.hs
