name:                packman-exploration
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/packman-exploration#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , packman
                     , binary
                     , bytestring
  default-language:    Haskell2010

executable packman-exploration
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packman-exploration
                     , packman
  default-language:    Haskell2010
