name:                packman-exploration
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/packman-exploration#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , PointerTransformation
  other-modules:       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , packman
                     , binary
                     , bytestring
                     , containers
                     , process
                     , split
  default-language:    Haskell2010

executable basic-example
  hs-source-dirs:      app
  main-is:             BasicExample.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packman
                     , binary
                     , bytestring
  default-language:    Haskell2010

executable relink1
  hs-source-dirs:      app
  main-is:             Relink1.hs
  other-modules:       Module
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packman
                     , packman-exploration
                     , bytestring
  default-language:    Haskell2010

executable relink2
  hs-source-dirs:      app
  main-is:             Relink2.hs
  other-modules:       Module
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packman
                     , packman-exploration
                     , bytestring
  default-language:    Haskell2010

executable no-top-level1
  hs-source-dirs:      app
  main-is:             NoTopLevelFunctions1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packman
                     , packman-exploration
                     , bytestring
  default-language:    Haskell2010

executable no-top-level2
  hs-source-dirs:      app
  main-is:             NoTopLevelFunctions2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packman
                     , packman-exploration
                     , bytestring
  default-language:    Haskell2010


executable transform-for-relink
  hs-source-dirs:      app
  main-is:             TransformForRelink.hs
  other-modules:       Module
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , packman
                     , packman-exploration
                     , bytestring
                     , packman
  default-language:    Haskell2010
